# VulkanTriangleTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Engine/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Transform.hpp  VulkanInitializers.cpp  VulkanInitializers.hpp
Engine/ECS/: CMakeLists.txt  ECS.cpp  ECS.hpp
Engine/Renderer/: CMakeLists.txt  PresentPass.cpp  PresentPass.hpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  VulkanInitializers.cpp  VulkanInitializers.hpp  VulkanTypes.hpp
Game/: CMakeLists.txt  Main.cpp
Resources/: mesh.vert  meshvert.spv
